objects/CSS_Feedback_Form__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FeedbackStatus__c</fullName>
        <description>Select the Feedback Status , whether its Received/Received In Process/Reply From CSS Team.</description>
        <inlineHelpText>Status of feedback form</inlineHelpText>
        <label>FeedbackStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>ReceivedInProcess</fullName>
                </value>
                <value>
                    <fullName>ReplyFromCSSTeam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FiveStarRating__c</fullName>
        <description>To Store the Rating</description>
        <label>FiveStarRating</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Stores  the type for Product.</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reply__c</fullName>
        <label>Reply</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_for_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a self look up to store a particular response in the db</description>
        <label>Response for Feedback</label>
        <referenceTo>CSS_Feedback_Form__c</referenceTo>
        <relationshipLabel>CSS Feedback Form</relationshipLabel>
        <relationshipName>CSS_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Close/Responded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Captures the Last modified session.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_Of_Feedback__c</fullName>
        <description>Allows users to select one of the picklist values.</description>
        <label>Type Of Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feedback 1</fullName>
                </value>
                <value>
                    <fullName>Feedback 2</fullName>
                </value>
                <value>
                    <fullName>Feedback 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLocationName__c</fullName>
        <label>UserLocationName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLocation__c</fullName>
        <description>To store user location</description>
        <label>UserLocation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Responsibility__c</fullName>
        <label>Work Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <label>Your Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CSS Feedback Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS Feedback Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Feedback Form</pluralLabel>
    <recordTypes>
        <fullName>FiveStarRating</fullName>
        <active>true</active>
        <description>To store Five start ratings</description>
        <label>FiveStarRating</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>